Style code samples in api headings like code. In the original design, code samples are wrapped in <code>. The current docs use <em>. <code> seems more correct, but now they're styled to work either way.

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -73,11 +73,14 @@ h3 {
   font-size: 1.5em;
   text-rendering: optimizeLegibility;
 
-  code {
+  code, em {
     margin-left: 1.5em;
 
-    font-weight: 500;
+    color: #555;
+    font-family: Source Code Pro, monospace, serif;
     font-size: 13px;
+    font-style: normal;
+    font-weight: 500;
     -webkit-font-smoothing: subpixel-antialiased;
   }
 }
